<resources>
    <string name="app_name">UP2ME</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
     <string name="webservice_url">http://54.201.43.253/up2me/Services</string>
    <string name="title_activity_bill_details">Bill Details</string>
    <string name="title_activity_user_registration">Registration</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="streetaddress1">Street Address</string>
    <string name="streetaddress2">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="email">User ID</string>
    <string name="pwd">Password</string>
    <string name="confirmpwd">Confirm Password</string>
    <string name="mobileno1">Mobile Number</string>
    <string name="mobileno2">Mobile Number</string>
    <string name="mandatory">*</string>
    <string name="register">Register</string>
    <string name="title_activity_offer_details">Offer Details</string>
    <string name="offerback">&lt; Offer</string>
    <string name="offerslabel">Offers</string>
    <string name="addtocard">Add to Card</string>
    <string name="title_activity_sync_process">SyncProcessActivity</string>
    <string name="sync_process_status">Synchronizing Offer Details...</string>
    <string name="poweredby">Powered By : </string>
    <string name="title_activity_account_statements">AccountStatements</string>
    <string name="title_activity_bills_statement">BillsStatement</string>
    <string name="title_activity_my_plan">MyPlanActivity</string>
    <string name="title_activity_assistants">AssistantsActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="receivedDate">Received Date</string>
    <string name="dueDate">Due Date</string>
    <string name="byProvider">By Provider</string>
    <string name="offerProvider">Provider name</string>
    <string name="offerExpireDate">Expiration date</string>
    <string name="title_activity_library">LibraryActivity</string>
    <string name="title_activity_show_library_pdf">ShowLibraryPDFActivity</string>
    <string name="title_activity_manage_tags">ManageTagsActivity</string>
    <string name="title_activity_manage_offer_providers">ManageOfferProvidersActivity</string>
    <string name="settings_tags">Tags</string>
    <string name="settings_cloud">Cloud</string>
	<string name="settings_offers">Offers</string>
    <string name="settings_providers">Providers</string>
    <string name="manageTagsHeading">Tags</string>
    <string name="back">&lt; Back</string>
    <string name="open_in">Open In</string>
    <string name="print">Print</string>
    <string name="add_to_drop_box">Add to DropBox</string>
    <string name="add_to_calender">Add to Calender</string>
    <string name="add_to_google_drive">Add to Google Drive</string>
    <string name="delete">Delete</string>
    <string name="addyouraccounttoassistants">Add Your Account To Assistants</string>
    <string name="vault">VAULT</string>
    <string name="bills">BILLS</string>
    <string name="statements">STATEMENTS</string>
    <string name="cashflow">CASH FLOW</string>
    <string name="alerts">ALERTS</string>
    <string name="savings">SAVINGS</string>
    <string name="unpaid">UNPAID</string>
    <string name="paid">PAID</string>
    <string name="expenses">EXPENSES</string>
    <string name="save">Save</string>
    <string name="documenthistory">Document History</string>
    <string name="selectyourofferproviders">Select Your Offer Providers</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="roboto_black">fonts/Roboto-Black.ttf</string>
    <string name="Roboto_BlackItalic">fonts/Roboto-BlackItalic.ttf</string>
    <string name="Roboto_Light">fonts/Roboto-Light.ttf</string>
    <string name="profile">Profile ></string>
    <string name="title_activity_select_cloud_provider">SelectCloudProviderActivity</string>
    <string name="title_activity_manage_document_providers">ManageDocumentProvidersActivity</string>
	<string name="selectyourdocumentproviders">Select Your Document Providers</string>
	<string name="offerproviderssavesuccessmsg">Your Offer Providers saved successfully.</string>
	<string name="documentproviderssavesuccessmsg">Your Document Providers saved successfully.</string>
	<string name="offerproviderssavefailedmsg">Error while saving Offer Providers. Please try again.</string>
	<string name="documentproviderssavefailedmsg">Error while saving Offer Providers. Please try again.</string>
    <string name="fontstyle1">FontStyle1</string>
    <string name="fontstyle2">FontStyle2</string>
    <string name="fontstyle3">FontStyle3</string>
    <string name="fontstyle4">FontStyle4</string>
    <string name="fontstyle5">FontStyle5</string>
    <string name="fontstyle6">FontStyle6</string>
    <string name="fontstyle7">FontStyle7</string>
    <string name="fontstyle8">FontStyle8</string>
    <string name="fontstyle9">FontStyle9</string>
    <string name="btnsignin">Sign In</string>
    <string name="btncancel">Cancel</string>
    <string name="btnRegister">Register as new User</string>
     <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_mobileno">This mobile number is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_username_password">Username or Password not valid.</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="notice_welcome">Welcome!</string>
    <string name="notice">If you are a new user, please register. If you have an existing account please sign in.</string>
    <string name="sync">Sync</string>
    <string name="title_activity_user_terms_conditions">UserTermsConditionsActivity</string>
    <string name="termsandconditions">Terms and Conditions</string>
    <string name="idonotaccept">I Do Not Accept the Terms</string>
    <string name="iaccept">I Accept the Terms</string>
    <string name="finish">Finish</string>
    <string name="continuebtn">Continue</string>
	<string name="settings_statements">Statements</string>
	<string name="settings_bills">Bills</string>
	<string name="settings_library">Library</string>
	<string name="settings_all">All</string>
	<string name="settings_appdata">App Data</string>
	<string name="settings_showbadges">Show Badges</string>
	<string name="settings_calendaralerts">Calendar Alerts</string>
	<string name="settings_cloudsync">Cloud Sync</string>
	<string name="settings_settimeoutto">Set timeout to:</string>
	<string name="settings_donottimeout">Do not timeout</string>
	<string name="settings_requirepasswordtologininUp2Me">Require Password to login in Up2Me</string>
	<string name="settings_minutes">minutes</string>
	<string name="termsandconditionstext">This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. This is a sample text. </string>
	<string name="heading_home">&lt;  Home</string>
	<string name="heading_bills">BILLS</string>
	<string name="heading_mail">MAIL</string>
	<string name="heading_statements">STATEMENTS</string>
	<string name="unread">Unread</string>
	<string name="statement_value">Value :" "</string>
	<string name="statement_date">Statement date :" "</string>
	<string name="heading_cashflow">CASHFLOW</string>
	<string name="cashflow_amount">Amount:" "</string>
	<string name="defaultdecimal">0.0</string>
	<string name="userexisted">This user is already existed.</string>
	<string name="heading_unpaid">UNPAID</string>
	<string name="enter_title">&lt;enter title&gt;</string>
	<string name="new_user_registration_failed">There is a problem with creating new user.</string>
	<string name="passwords_do_not_match">Password and Confirm Password should be same.</string>
	<string name="tap_to_view">Tap To View</string>
	<string name="statementdelete">This document has been deleted, do you want to revert to the previous document?</string>
	<string name="revertbtn">Revert</string>
	<string name="document_type">Document Type</string>
	<string name="googleWallet">Google Wallet</string>
	<string name="payPal">PayPal</string>
    <string name="online">Online</string>
    <string name="yourBank">Your Bank</string>
    <string name="title_activity_bill_pay">BillPayActivity</string>
</resources>